Updated documentation to reflect new goal